# disco

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  GPU Euler Integration.ipynb  LICENSE  Pipfile  README.md  Visualize.ipynb  activate.sh  libgputrace.py  mpi_test.py  plotting_utils.py  pyproject.toml  requirements.txt  test_dipole.py  test_lfm.py  test_nokernel.py
Attic/: GPU Euler Integration.ipynb  GPU Euler Integration2.ipynb  mpi_test2.py  multi_domain_sync.py
disco/: __init__.py  _axes.py  _dimensionalization.py  _field_model.py  _field_model_loader.py  _kernels.py  _particle_history.py  _regrid.py  _version.py  constants.py  kernels.py  readers.py
disco/data/OpenGGCMGrids/overview_7M_now_11.8Mcells/: grid_name  gridx.txt  gridy.txt  gridz.txt
disco/tests/: axes_test.py  dimensionalization_test.py  dipole_test.py  field_model_test.py  particle_history_test.py  readers_test.py  testing_utils.py
disco/tests/integration/: dipole_test.py  integration_test_utils.py  swmf_test.py
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_templates/: github.html
docs/dev-guide/: index.rst
docs/user-guide/: examples.rst  guiding-center.rst  index.rst  interpolation.rst  regridding.rst
