[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disco"
description = "GPU-powered Magnetospheric Particle Trajectory Modeling in Python"
readme = "README.rst"
dynamic = ["version"]
authors = [{name = "Daniel da Silva", email="daniel.e.dasilva@nasa.gov"}]
license = {file = "LICENSE.rst"}
requires-python = ">=3.9"
keywords = ["python", "magnetosphere", "gpu"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
]
dependencies = [
  'astropy>=6.0',
  'h5py>=3.13.0',
  'matplotlib>=3.10.3',
  'numpy>=1.22',
  'scipy>=1.15.3',
]

[project.optional-dependencies]
dev = [
  'coverage>=6.5.0',
  'h5py>=3.1.0',
  'pytest>=7.1.3, <8.1.0',
  'pytest-astropy',
  'pytest-cov',
  'black==22.10.0',
  'flake8>=5.0.4',
  'coverage[toml]'
]

docs = [
  'sphinx>=5.2.3',
  'sphinx-automodapi>=0.14.1',
  'graphviz>=0.20.1',
  'numpydoc',
]

#[tool.setuptools.package-data]
#"ccsdspy.data" = ["**"]

[tool.setuptools]
packages = ["disco"]

[tool.setuptools_scm]
write_to = "disco/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["disco/tests",]
norecursedirs = ["build", "docs/_build", "docs/generated", "*.egg-info", "attic"]
#doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-modules"
collect_ignore_glob= ['_*.py']
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  # This is due to dependencies building with a numpy version different from
  # the local installed numpy version, but should be fine
  # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
  "ignore:numpy.ufunc size changed:RuntimeWarning",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  # See https://github.com/astropy/extension-helpers/issues/23
  "ignore:Distutils was imported before Setuptools"
]


[tool.coverage.run]
omit = [
  'disco/__init*',
  'disco/conftest.py',
  'disco/*setup_package*',
  'disco/tests/*',
  'disco/*/tests/*',
  'disco/extern/*',
  'disco/_version*',
  '*/disco/__init*',
  '*/disco/conftest.py',
  '*/disco/*setup_package*',
  '*/disco/tests/*',
  '*/disco/*/tests/*',
  '*/disco/extern/*',
  '*/disco/version*',
]

[tool.black]
line_length = 100
extend-exclude = '''
/(
    _version.py
)/
'''
